--- a/homeappliances.html
+++ b/homeappliances.html
@@ -1285,6 +1285,40 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
+                        <div class="product-item bg-light mb-4">
+                            <div class="product-img position-relative overflow-hidden">
+                                <img class="img-fluid w-100" src="img/4499m.jpg" alt="">
+                                <div class="product-action">
+                                    <a class="btn btn-outline-dark" href="">
+                                    <ol>
+                                       <br>
+                                        <li>FLOOR STANDING TYPE AIR CONDITIONER,
+                                            T1 CONDITION,
+                                            R32,
+                                            COOLING ONLY,
+                                            220V/50HZ,3M,
+                                            COPPER PIPES</li>
+                                           
+                                    </ol>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="text-center py-4">
+                                <a class="h6 text-decoration-none text-truncate" href=""> TCL-ROUND-FLOOR-STANDING-AC-R32 </a>
+                                
+                                <a class="h6 text-decoration-none text-truncate" href="">2.5-TAC-18CFD/MCI</a>
+                                <div class="d-flex align-items-center justify-content-center mt-2">
+                                    <h5>GHS 9,499.00</h5>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-center mb-1">
+                                    <button type="button" class="btn btn-primary">Purchase</button>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
