home appliance page

--- a/homeappliances.html
+++ b/homeappliances.html
@@ -1413,7 +1413,7 @@
                             <div class="text-center py-4">
                                 <a class="h6 text-decoration-none text-truncate" href="">MIDEA 2.5HP FOREST Series R32</a>
                                 
-                                <a class="h6 text-decoration-none text-truncate" href=""> Inverter Wall Mounted Air Conditioner MSAF-24CRDN8</a>
+                                <a class="h6 text-decoration-none text-truncate" href=""> Inverter Wall Mounted Air Conditioner <br> MSAF-24CRDN8</a>
                                 <div class="d-flex align-items-center justify-content-center mt-2">
                                     <h5>GHS 10,499.00</h5>
                                 </div>
@@ -1449,7 +1449,7 @@
                             <div class="text-center py-4">
                                 <a class="h6 text-decoration-none text-truncate" href="">MIDEA 2.5HP FOREST Series R32</a>
                                 
-                                <a class="h6 text-decoration-none text-truncate" href=""> Inverter Wall Mounted Air Conditioner MSAF-24CRDN8</a>
+                                <a class="h6 text-decoration-none text-truncate" href=""> Inverter Wall Mounted Air Conditioner <br> MSAF-24CRDN8</a>
                                 <div class="d-flex align-items-center justify-content-center mt-2">
                                     <h5>GHS 7,499.00</h5>
                                 </div>
