--- a/homeappliances.html
+++ b/homeappliances.html
@@ -5094,10 +5094,10 @@
                     </div>
                 </div>
             </div>
-            </div>
             
 
 
+            <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
             <div class="product-item bg-light mb-4">
                 <div class="product-img position-relative overflow-hidden">
                     <img class="img-fluid w-100" src="img/329.jpg" alt="">
@@ -5132,7 +5132,8 @@
                 </div>
             </div>
         </div>
-
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
         <div class="product-item bg-light mb-4">
             <div class="product-img position-relative overflow-hidden">
                 <img class="img-fluid w-100" src="img/449n1.jpg" alt="">
@@ -5167,8 +5168,9 @@
             </div>
         </div>
     </div>
+    </div>
 
-
+    <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
     <div class="product-item bg-light mb-4">
         <div class="product-img position-relative overflow-hidden">
             <img class="img-fluid w-100" src="img/219n.jpg" alt="">
@@ -5203,7 +5205,10 @@
         </div>
     </div>
 </div>
+</div>
 
+
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/399n.jpg" alt="">
@@ -5237,10 +5242,12 @@
 
         </div>
     </div>
+  </div>
 </div>
 </div>
 
-<div class="product-item bg-light mb-4">
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
+   <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/449n2.jpg" alt="">
         <div class="product-action">
@@ -5275,8 +5282,11 @@
     </div>
 </div>
 </div>
+</div>
 
-<div class="product-item bg-light mb-4">
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
+
+   <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/499n3.jpg" alt="">
         <div class="product-action">
@@ -5312,7 +5322,9 @@
 </div>
 </div>
 
-<div class="product-item bg-light mb-4">
+</div>
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
+   <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/449n3.jpg" alt="">
         <div class="product-action">
@@ -5347,7 +5359,8 @@
     </div>
 </div>
 </div>
-
+</div>
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/449n2.jpg" alt="">
@@ -5383,7 +5396,10 @@
     </div>
 </div>
 </div>
+</div>
 
+
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/449n4.jpg" alt="">
@@ -5421,9 +5437,10 @@
     </div>
 </div>
 </div>
+</div>
 
 
-
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/489n.jpg" alt="">
@@ -5461,8 +5478,10 @@
     </div>
 </div>
 </div>
+</div>
 
 
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/499n4.jpg" alt="">
@@ -5500,8 +5519,9 @@
     </div>
 </div>
 </div>
+</div>
 
-
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/999n.jpg" alt="">
@@ -5539,7 +5559,9 @@
     </div>
 </div>
 </div>
+</div>
 
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/449nn.jpg" alt="">
@@ -5571,7 +5593,10 @@
     </div>
 </div>
 </div>
+</div>
 
+
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/489n1.jpg" alt="">
@@ -5607,8 +5632,9 @@
     </div>
 </div>
 </div>
+</div>
            
-
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/549.jpg" alt="">
@@ -5644,8 +5670,9 @@
     </div>
 </div>
 </div>
+</div>
 
-
+<div class="col-lg-4 col-md-6 col-sm-6 pb-1">
 <div class="product-item bg-light mb-4">
     <div class="product-img position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/779.jpg" alt="">
@@ -5679,6 +5706,7 @@
 
         </div>
     </div>
+</div>
 </div>
 </div>
 
